Toetsenborden gemaakt en home pagina gemerged

--- a/HTML/productpagina.html
+++ b/HTML/productpagina.html
@@ -5,14 +5,14 @@
 		<title>PC4U</title>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu:400italic' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-		<link href="../stylesheet.css" rel="stylesheet" type="text/css">
+		<link href="../../stylesheet.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<div class="container">
 			<div class="top-section">
 				<div class="company">
 					<div class="logo">
-						<img src="../images/logo.png"/>
+						<img src="../../images/logo.png"/>
 					</div>
 					<div class="slogan">
 						<h1>Het beste, maar dan goedkoper!</h1>
@@ -20,11 +20,11 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="home.html">Home</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="computers.html">Computers</a></li>
-						<li><a href="reparatie.html">Reparatie</a></li>
-						<li><a href="Informatie.html">Informatie</a></li>
+						<li><a href="../home.html">Home</a></li>
+						<li><a href="../shop.html">Shop</a></li>
+						<li><a href="../computers.html">Computers</a></li>
+						<li><a href="../reparatie.html">Reparatie</a></li>
+						<li><a href="../Informatie.html">Informatie</a></li>
 					</ul>
 				</div>
 			</div>
@@ -52,7 +52,7 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../images/computer-placeholderr.jpg" alt="Placeholder Computer">
+							<img src="../../images/computer-placeholderr.jpg" alt="Placeholder Computer">
 						</div>
 						<div class="besproduct">
 							<h3>Naam product</h3>
@@ -67,45 +67,45 @@
 					<div class="productspecs">
 						<div class="specrow">
 							<p>hefhhghehdghdghd</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ehehfhfhhfhehafhefehfhefhfhe</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>hfhefhefhhefhfehefehi</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ghrghghrgghrhgrnsfm</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ehhfhefhekfhekgregsekofsebfhfsbf</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
 							<p>hefhhghehdghdghd</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ehehfhfhhfhehafhefehfhefhfhe</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>hfhefhefhhefhfehefehi</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ghrghghrgghrhgrnsfm</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
 							<p>ehhfhefhekfhekgregsekofsebfhfsbf</p>
-							<img src="../images/checkedbox.ico" alt="checked checkbox">
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 				</div>
