--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -36,7 +36,7 @@
 					<ul>
 						<li>Producten</li>
 						<li><a href="monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="#">Toetsenborden</a></li>
+						<li><a href="toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
