--- a/HTML/toetsenborden/logitech-k270.html
+++ b/HTML/toetsenborden/logitech-k270.html
@@ -35,8 +35,8 @@
 				<div class="categories">
 					<ul>
 						<li>Shop</li>
-						<li><a href="monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
@@ -52,47 +52,43 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/acer_monitor2.png" alt="acer monitor">
+							<img src="../../images/LOGITECH-K2702.png" alt="logitech toetsenbord">
 						</div>
 						<div class="besproduct">
-							<h3>ACER K242HLABID</h3>
+							<h3>LOGITECH K270</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 91%"></span>
+								<span style="width: 88%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De Acer K242HLABID is een 24-inch monitor geschikt voor alle multimedia toepassingen. Het scherm heeft een resolutie van 1920 bij 1080 pixels. Daarnaast is de Acer K242HLABID met een verbruik van slechts 23 W erg zuinig.</p>
+							<p>Dit draadloze toetsenbord van Logitech is voorzien van 8 sneltoetsen voor volledige controle over uw PC. Hij wordt geleverd met een Nano-ontvanger die u altijd in uw computer kunt laten zitten zonder dat hij in de weg zit. Hij werkt tot 24 maanden op 2 AAA-batterijen is tevens morsbestendig.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDMI-aansluiting</p>
+							<p>Draadloos</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>VGA-aansluiting</p>
+							<p>Batterij 2x AAA</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>DVI-aansluiting</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>LED-monitor</p>
+							<p>USB-hub</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDCP-ondersteuning</p>
+							<p>Windows 7</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Automatische helderheidsaanpassing</p>
+							<p>Windows Vista</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>LED-backlight</p>
+							<p>Windows XP</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
