--- a/HTML/toetsenborden/logitech-k800.html
+++ b/HTML/toetsenborden/logitech-k800.html
@@ -35,8 +35,8 @@
 				<div class="categories">
 					<ul>
 						<li>Shop</li>
-						<li><a href="monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
@@ -52,47 +52,31 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/acer_monitor2.png" alt="acer monitor">
+							<img src="../../images/LOGITECH-K800-2.png" alt="logitech toetsenbord">
 						</div>
 						<div class="besproduct">
-							<h3>ACER K242HLABID</h3>
+							<h3>LOGITECH K800 Draadloos lichtgevend toetsenbord</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 91%"></span>
+								<span style="width: 30%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De Acer K242HLABID is een 24-inch monitor geschikt voor alle multimedia toepassingen. Het scherm heeft een resolutie van 1920 bij 1080 pixels. Daarnaast is de Acer K242HLABID met een verbruik van slechts 23 W erg zuinig.</p>
+							<p>De Logitech K800 heeft een lichtgevend toetsenbord, waardoor u gemakkelijk in het donker kan werken. Verder zijn de toetsen voorzien van zachte randen voor een comfortabele typ-ervaring en wordt hij geleverd met een draadloze nano-ontvanger.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDMI-aansluiting</p>
+							<p>NANO-ontvanger</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>VGA-aansluiting</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>DVI-aansluiting</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>LED-monitor</p>
+							<p>Verlichte toetsen</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDCP-ondersteuning</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>Automatische helderheidsaanpassing</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>LED-backlight</p>
+							<p>Draadloos</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
