--- a/HTML/toetsenborden/razer-deathstalker.html
+++ b/HTML/toetsenborden/razer-deathstalker.html
@@ -35,8 +35,8 @@
 				<div class="categories">
 					<ul>
 						<li>Shop</li>
-						<li><a href="monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
@@ -52,47 +52,47 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/acer_monitor2.png" alt="acer monitor">
+							<img src="../../images/RAZER-DeathStalker-Chroma-2.png" alt="razer toetsenbord">
 						</div>
 						<div class="besproduct">
-							<h3>ACER K242HLABID</h3>
+							<h3>Razer Deathstalker Chroma</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 91%"></span>
+								<span style="width: 80%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De Acer K242HLABID is een 24-inch monitor geschikt voor alle multimedia toepassingen. Het scherm heeft een resolutie van 1920 bij 1080 pixels. Daarnaast is de Acer K242HLABID met een verbruik van slechts 23 W erg zuinig.</p>
+							<p>Het Razer Deathstalker Chroma gaming-toetsenbord is perfect voor de fanatieke gamer. Elke toetsaanslag wordt nauwkeurige geregistreerd en direct omgezet in actie. Bovendien speelt u ook heel eenvoudig in een donkere omgeving dankzij de heldere toets-verlichting.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDMI-aansluiting</p>
+							<p>Verlichte toetsen</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>VGA-aansluiting</p>
+							<p>Bedraad</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>DVI-aansluiting</p>
+							<p>Windows XP (32-bit)</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>LED-monitor</p>
+							<p>Windows Vista</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDCP-ondersteuning</p>
+							<p>Windows 7</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Automatische helderheidsaanpassing</p>
+							<p>Windows 8</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>LED-backlight</p>
+							<p>Mac OS X (v10.8-10.10)</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
