--- a/HTML/toetsenborden/toetsenborden.html
+++ b/HTML/toetsenborden/toetsenborden.html
@@ -30,13 +30,13 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Monitoren</h2>
+					<h2>Toetsenborden</h2>
 				</div>
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="#">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="#">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
@@ -52,47 +52,41 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="ACERK242HLABID.html">
-							<img src="../../images/acer_monitor.png" alt="acer monitor">
-							<div class="discount">
-								<p>-25%</p>
-							</div>
-							<h3>ACER K242HLABID</h3>
+							<a href="logitech-k120.html">
+							<img src="../../images/LOGITECH-K120.png" alt="logitech toetsenbord">
+							<h3>LOGITECH K120</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="ASUSVS247HR.html">
-							<img src="../../images/ASUS-VS247HR.png" alt="asus monitor">
-							<h3>ASUS VS247HR</h3>
+							<a href="logitech-k270.html">
+							<img src="../../images/LOGITECH-K270.png" alt="logitech toetsenbord">
+							<h3>LOGITECH K270 </h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="ASUSVG248QE.html">
-							<img src="../../images/ASUS-VG248QE.png" alt="asus monitor">
-							<div class="discount">
-								<p>-70%</p>
-							</div>
-							<h3>ASUS VG248QE</h3>
+							<a href="logitech-k400.html">
+							<img src="../../images/LOGITECH-K400.png" alt="logitech toetsenbord">
+							<h3>LOGITECH K400</h3>
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="BENQRL2755HM.html">
-							<img src="../../images/BENQ-RL2755HM.png" alt="benq monitor">
-							<h3>BENQ RL2755HM</h3>
+							<a href="logitech-k800.html">
+							<img src="../../images/LOGITECH-K800.png" alt="logitech toetsenbord">
+							<h3>LOGITECH K800</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="LG29UM57-P.html">
-							<img src="../../images/LG-29UM57-P.png" alt="lg monitor">
-							<h3>LG 29UM57-P</h3>
+							<a href="razer-deathstalker.html">
+							<img src="../../images/RAZER-DeathStalker-Chromaa.png" alt="razer toetsenbord">
+							<h3>RAZER Deathstalker</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="Applethunderbold.html">
-							<img src="../../images/APPLE-Thunderbolt-Display-(27-inch).png" alt="Apple monitor">
-							<h3>APPLE THUNDERBOLT</h3>
+							<a href="trust-classicline.html">
+							<img src="../../images/TRUST-ClassicLine.png" alt="trust toetsenbord">
+							<h3>TRUST ClassicLine</h3>
 							</a>
 						</div>
 					</div>					
@@ -101,4 +95,3 @@
 		</div>
 	</body>
 </html>
-
