--- a/HTML/toetsenborden/trust-classicline.html
+++ b/HTML/toetsenborden/trust-classicline.html
@@ -35,8 +35,8 @@
 				<div class="categories">
 					<ul>
 						<li>Shop</li>
-						<li><a href="monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
@@ -52,47 +52,47 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/acer_monitor2.png" alt="acer monitor">
+							<img src="../../images/TRUST-ClassicLine-2.png" alt="trust toetsenbord">
 						</div>
 						<div class="besproduct">
-							<h3>ACER K242HLABID</h3>
+							<h3>TRUST ClassicLine Toetsenbord</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 91%"></span>
+								<span style="width: 16%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De Acer K242HLABID is een 24-inch monitor geschikt voor alle multimedia toepassingen. Het scherm heeft een resolutie van 1920 bij 1080 pixels. Daarnaast is de Acer K242HLABID met een verbruik van slechts 23 W erg zuinig.</p>
+							<p>Het ClassicLine Toetsenbord van Trust is een toetsenbord met standaardindeling en speciale toetsen voor aan/uit, slaapstand en activatie. Typen gaat comfortabel en stil. Bovendien is het ClassicLine Toetsenbord morsbestendig, dus geen paniek wanneer je per ongeluk je drinken omstoot.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDMI-aansluiting</p>
+							<p>USB-aansluiting</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>VGA-aansluiting</p>
+							<p>Lengte aansluitkabel: 1.8m</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>DVI-aansluiting</p>
+							<p>Windows Vista</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>LED-monitor</p>
+							<p>Mac OS X 10.5 (Leopard) of hoger</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDCP-ondersteuning</p>
+							<p>Windows 7</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Automatische helderheidsaanpassing</p>
+							<p>Windows 8</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>LED-backlight</p>
+							<p>Windows 10</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
