--- a/HTML/toetsenborden/logitech-k120.html
+++ b/HTML/toetsenborden/logitech-k120.html
@@ -35,8 +35,8 @@
 				<div class="categories">
 					<ul>
 						<li>Shop</li>
-						<li><a href="monitoren.html">Monitoren</a></li>
-						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
+						<li><a href="toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
@@ -52,47 +52,39 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/acer_monitor2.png" alt="acer monitor">
+							<img src="../../images/LOGITECH-K120-2.png" alt="logitech toetsenbord">
 						</div>
 						<div class="besproduct">
-							<h3>ACER K242HLABID</h3>
+							<h3>LOGITECH K120 toetsenbord</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 91%"></span>
+								<span style="width: 54%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>De Acer K242HLABID is een 24-inch monitor geschikt voor alle multimedia toepassingen. Het scherm heeft een resolutie van 1920 bij 1080 pixels. Daarnaast is de Acer K242HLABID met een verbruik van slechts 23 W erg zuinig.</p>
+							<p>De Logitech K120 is een eenvoudig toetsenbord met USB-aansluiting. Hij heeft stille toetsen zodat u hard aan het werk kunt, zonder uw omgeving te storen. De K120 is morsbestendig en heeft een gestroomlijnd ontwerp voor een comfortabele typervaring.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDMI-aansluiting</p>
+							<p>Windows XP</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>VGA-aansluiting</p>
+							<p>Windows Vista</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>DVI-aansluiting</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>LED-monitor</p>
+							<p>Windows 7</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>HDCP-ondersteuning</p>
+							<p>Windows 8</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Automatische helderheidsaanpassing</p>
-							<img src="../../images/checkedbox.ico" alt="checked checkbox">
-						</div>
-						<div class="specrow">
-							<p>LED-backlight</p>
+							<p>Linux Kernel 2.6+</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
