home.html toegevoegd

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -39,9 +39,7 @@
 				</div>
 				<div class="slidecontainer">
 						<div class="slideshow">
-							<a href="http://www.instagram.nl">
-								<img class="slide" id="slide1" src="../images/slide1.jpg" alt="instagram">
-							</a>
+							<img class="slide" id="slide1" src="../images/slide1.jpg" alt="instagram">
 							<img class="slide" id="slide2" src="../images/slide5.jpg" alt="winkol">
 							<img class="slide" id="slide3" src="../images/slide2.png" alt="ICT">	
 							<img class="slide" id="slide4" src="../images/slide3.png" alt="ICT winkel">
@@ -54,22 +52,11 @@
 							<img id="slideup-r" src="../images/arrright.png" alt="Slide right">
 						</div>
 				</div>
-<<<<<<< HEAD
-				<!-- <button id="slideup-l">Slide left</button>
-				<button id="slideup-r">Slide right</button> -->
-
-=======
-			<div class="kyfresh">	
-				<a href="#" onclick="$('#slide1').ScrollTo()">Slide1</a>
-				<a href="#" onclick="$('#slide2').ScrollTo()">Slide2</a>
-				<a href="#" onclick="$('#slide3').ScrollTo()">Slide3</a>
-				<a href="#" onclick="$('#slide4').ScrollTo()">Slide4</a>
-				<div class="social">
-			</div>
->>>>>>> origin/master
 				<div class="social">
 					<h3>Volg ons ook op social media:</h3>
+					<a href="http:\\www.instagram.com">
 						<img src="../images/insta.png" alt="instagram">
+					</a>
 						<img src="../images/facebok.png" alt="Facebook">
 						<img src="../images/twitter.png" alt="Twittar">
 						<img src="../images/linkedout.jpg" alt="LinkedIn">
@@ -77,15 +64,8 @@
 				</div>
 			</div>
 		</div>
-<<<<<<< HEAD
 		<script src="../Jquery/jquery.min.js"></script>
 		<script src="../Javascript/jquery-scrollto.js"></script>
 		<script src="../Javascript/main.js"></script>
-=======
-		
-		<script src="../Jquery/jquery.min.js"></script>
-		<script src="../Javascript/jquery-scrollto.js"></script>
-		<script src="../Javascript/main.jsp"></script>
->>>>>>> origin/master
 	</body>
 </html>
