--- a/HTML/muizen/logitech-g502.html
+++ b/HTML/muizen/logitech-g502.html
@@ -36,8 +36,8 @@
 					<ul>
 						<li>Shop</li>
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="../muizen/muizen.html">Muizen</a></li>
+						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
@@ -52,29 +52,33 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/LOGITECH-K2702.png" alt="logitech toetsenbord">
+							<img src="../../images/LOGITECH-G502-2.png" alt="logitech muis">
 						</div>
 						<div class="besproduct">
-							<h3>LOGITECH K270</h3>
+							<h3>LOGITECH G502</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 88%"></span>
+								<span style="width: 12%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>Dit draadloze toetsenbord van Logitech is voorzien van 8 sneltoetsen voor volledige controle over uw PC. Hij wordt geleverd met een Nano-ontvanger die u altijd in uw computer kunt laten zitten zonder dat hij in de weg zit. Hij werkt tot 24 maanden op 2 AAA-batterijen is tevens morsbestendig.</p>
+							<p>De logitech g502 is optimaal voor gamers door de flexibele scrollwiel. Doordat de functietoetsen programmeerbaar zijn kunt u zelf kiezen wat u met elke toets wilt doen. Er worden ook gewichten bijgeleverd om zelf het gewicht van de muis te bepalen.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>Draadloos</p>
+							<p>Bedraad</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Batterij 2x AAA</p>
+							<p>Scrollwiel</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>USB-hub</p>
+							<p>Functietoetsen: Programmeerbaar</p>
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>Windows Vista</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
@@ -84,11 +88,11 @@
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Windows Vista</p>
+							<p>Windows 8</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Windows XP</p>
+							<p>Windows 8.1</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
