--- a/HTML/muizen/madcatz.html
+++ b/HTML/muizen/madcatz.html
@@ -36,8 +36,8 @@
 					<ul>
 						<li>Shop</li>
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="../muizen/muizen.html">Muizen</a></li>
+						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
@@ -52,29 +52,33 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/LOGITECH-K2702.png" alt="logitech toetsenbord">
+							<img src="../../images/MAD-CATZ-R.A.T-2.jpg" alt="mad catz muis">
 						</div>
 						<div class="besproduct">
-							<h3>LOGITECH K270</h3>
+							<h3>MAD CATZ R.A.T. Pro X Pixart PMW3310</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 88%"></span>
+								<span style="width: 25%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>Dit draadloze toetsenbord van Logitech is voorzien van 8 sneltoetsen voor volledige controle over uw PC. Hij wordt geleverd met een Nano-ontvanger die u altijd in uw computer kunt laten zitten zonder dat hij in de weg zit. Hij werkt tot 24 maanden op 2 AAA-batterijen is tevens morsbestendig.</p>
+							<p>De Mad Catz R.A.T. Pro X game muis beschikt over verwisselbare componenten. Bijna alles wat je kan aanraken kan vervangen worden. Zo zijn er drie sensoren: een magnesium chassis, een optisch scrollwiel en een analoog scrollwiel. Hij heeft een resolutie van maar liefst 5000 dpi.</p>
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>Draadloos</p>
+							<p>Bedraad</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Batterij 2x AAA</p>
+							<p>Scrollwiel</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>USB-hub</p>
+							<p>10 functietoetsen</p>
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>USB 2.0-aansluiting</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
@@ -84,11 +88,11 @@
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Windows Vista</p>
+							<p>Windows 8</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Windows XP</p>
+							<p>Windows 8.1</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
