--- a/HTML/muizen/muizen.html
+++ b/HTML/muizen/muizen.html
@@ -30,14 +30,14 @@
 			</div>
 			<div class="main-section">
 				<div class="title">
-					<h2>Monitoren</h2>
+					<h2>Muizen</h2>
 				</div>
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="#">Monitoren</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="../muizen/muizen.html">Muizen</a></li>
+						<li><a href="#">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
@@ -52,47 +52,41 @@
 				<div class="products">
 					<div class="p-row">
 						<div class="product">
-							<a href="ACERK242HLABID.html">
-							<img src="../../images/acer_monitor.png" alt="acer monitor">
-							<div class="discount">
-								<p>-25%</p>
-							</div>
-							<h3>ACER K242HLABID</h3>
+							<a href="logitech-m185.html">
+							<img src="../../images/LOGITECH-M185.png" alt="logitech muis">
+							<h3>LOGITECH M185</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="ASUSVS247HR.html">
-							<img src="../../images/ASUS-VS247HR.png" alt="asus monitor">
-							<h3>ASUS VS247HR</h3>
+							<a href="logitech-m235.html">
+							<img src="../../images/LOGITECH-M235.png" alt="logitech muis">
+							<h3>LOGITECH M235</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="ASUSVG248QE.html">
-							<img src="../../images/ASUS-VG248QE.png" alt="asus monitor">
-							<div class="discount">
-								<p>-70%</p>
-							</div>
-							<h3>ASUS VG248QE</h3>
+							<a href="logitech-m570.html">
+							<img src="../../images/LOGITECH-M570.png" alt="logitech muis">
+							<h3>LOGITECH M570</h3>
 							</a>
 						</div>
 					</div>
 					<div class="p-row">
 						<div class="product">
-							<a href="BENQRL2755HM.html">
-							<img src="../../images/BENQ-RL2755HM.png" alt="benq monitor">
-							<h3>BENQ RL2755HM</h3>
+							<a href="logitech-g502.html">
+							<img src="../../images/LOGITECH-G502.png" alt="logitech muis">
+							<h3>LOGITECH G502</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="LG29UM57-P.html">
-							<img src="../../images/LG-29UM57-P.png" alt="lg monitor">
-							<h3>LG 29UM57-P</h3>
+							<a href="trustprimo.html">
+							<img src="../../images/TRUST-Primo.png" alt="trust muis">
+							<h3>TRUST Primo</h3>
 							</a>
 						</div>
 						<div class="product">
-							<a href="Applethunderbold.html">
-							<img src="../../images/APPLE-Thunderbolt-Display-(27-inch).png" alt="Apple monitor">
-							<h3>APPLE THUNDERBOLT</h3>
+							<a href="madcatz.html">
+							<img src="../../images/MAD-CATZ-R.A.T.jpg" alt="mad catz muis">
+							<h3>MAD CATZ R.A.T. Pro X</h3>
 							</a>
 						</div>
 					</div>					
