--- a/HTML/muizen/logitech-m570.html
+++ b/HTML/muizen/logitech-m570.html
@@ -36,8 +36,8 @@
 					<ul>
 						<li>Shop</li>
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="../muizen/muizen.html">Muizen</a></li>
+						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
+						<li><a href="muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
@@ -52,16 +52,16 @@
 				<div class="product-part">
 					<div class="productinfo">
 						<div class="imgproduct">
-							<img src="../../images/LOGITECH-K2702.png" alt="logitech toetsenbord">
+							<img src="../../images/LOGITECH-M570-2.png" alt="logitech muis">
 						</div>
 						<div class="besproduct">
-							<h3>LOGITECH K270</h3>
+							<h3>LOGITECH M570</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 88%"></span>
+								<span style="width: 56%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>Dit draadloze toetsenbord van Logitech is voorzien van 8 sneltoetsen voor volledige controle over uw PC. Hij wordt geleverd met een Nano-ontvanger die u altijd in uw computer kunt laten zitten zonder dat hij in de weg zit. Hij werkt tot 24 maanden op 2 AAA-batterijen is tevens morsbestendig.</p>
+							<p>De Logitech M570 is een draadloze muis die altijd op zijn plaats blijft. Hierdoor hoeft u uw arm niet te bewegen om de cursor te bewegen. De 2,4 GHZ-technologie zorgt voor een snelle gegevensoverdracht zonde vertraging of storing.</p>
 						</div>
 					</div>
 					<div class="productspecs">
@@ -70,17 +70,21 @@
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Batterij 2x AAA</p>
+							<p>Batterij: 1x AA</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>USB-hub</p>
+							<p>Scrollwiel</p>
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>Notebook muis</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
 					<div class="productspecs">
 						<div class="specrow">
-							<p>Windows 7</p>
+							<p>Windows XP</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
@@ -88,7 +92,11 @@
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 						<div class="specrow">
-							<p>Windows XP</p>
+							<p>Windows 7</p>
+							<img src="../../images/checkedbox.ico" alt="checked checkbox">
+						</div>
+						<div class="specrow">
+							<p>Mac OS X 10.5 of hoger</p>
 							<img src="../../images/checkedbox.ico" alt="checked checkbox">
 						</div>
 					</div>
