--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -37,7 +37,7 @@
 						<li>Producten</li>
 						<li><a href="monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="toetsenborden/toetsenborden.html">Toetsenborden</a></li>
-						<li><a href="#">Muizen</a></li>
+						<li><a href="muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
