--- a/HTML/grafische-kaarten/ASUS-R9-Fury-Strix.html
+++ b/HTML/grafische-kaarten/ASUS-R9-Fury-Strix.html
@@ -58,10 +58,10 @@
 							<h3>ASUS R9 Fury Strix</h3>
 							<h4>Voorraad</h4>
 							<div class="meter">
-								<span style="width: 27%"></span>
+								<span style="width: 98%"></span>
 							</div>
 							<h4>Beschrijving product</h4>
-							<p>Deze kaart is een high-end class kaart. Met zijn specificaties zijn geen enkele game nog een probleem meer. </p>
+							<p>Deze kaart is een high-end class kaart. Met zijn specificaties zijn geen enkele game nog een probleem </p>
 						</div>
 					</div>
 					<div class="productspecs">
