--- a/HTML/computers.html
+++ b/HTML/computers.html
@@ -35,8 +35,8 @@
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="#">Complete PC's</a></li>
-						<li><a href="#">Notebook's</a></li>
+						<li><a href="Complete-pc/complete-pc.html">Complete PC's</a></li>
+						<li><a href="notebook/notebook.html">Notebook's</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
