--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -40,9 +40,9 @@
 						<li><a href="muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
+						<li><a href="grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
