links aangepast en bijgewerkt

--- a/HTML/moederborden/moederborden.html
+++ b/HTML/moederborden/moederborden.html
@@ -35,14 +35,14 @@
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="#">Monitoren</a></li>
+						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Moederbord</a></li>
+						<li><a href="moederborden.html">Moederbord</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
