--- a/HTML/monitoren/monitoren.html
+++ b/HTML/monitoren/monitoren.html
@@ -35,14 +35,14 @@
 				<div class="categories">
 					<ul>
 						<li>Producten</li>
-						<li><a href="#">Monitoren</a></li>
+						<li><a href="monitoren.html">Monitoren</a></li>
 						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische Kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
