--- a/HTML/toetsenborden/toetsenborden.html
+++ b/HTML/toetsenborden/toetsenborden.html
@@ -36,13 +36,13 @@
 					<ul>
 						<li>Producten</li>
 						<li><a href="../monitoren/monitoren.html">Monitoren</a></li>
-						<li><a href="#">Toetsenborden</a></li>
+						<li><a href="../toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="#">Grafische kaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Netwerkkaarten</a></li>
+						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
