--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -38,8 +38,8 @@
 						<li><a href="monitoren/monitoren.html">Monitoren</a></li>
 						<li><a href="toetsenborden/toetsenborden.html">Toetsenborden</a></li>
 						<li><a href="muizen/muizen.html">Muizen</a></li>
-						<li><a href="#">Harde schijven</a></li>
-						<li><a href="#">Geluidskaarten</a></li>
+						<li><a href="harde-schijven/hardeschijven.html">Harde schijven</a></li>
+						<li><a href="geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
 						<li><a href="#">Netwerkkaarten</a></li>
