--- a/HTML/monitoren/monitoren.html
+++ b/HTML/monitoren/monitoren.html
@@ -40,7 +40,7 @@
 						<li><a href="../muizen/muizen.html">Muizen</a></li>
 						<li><a href="#">Harde schijven</a></li>
 						<li><a href="#">Geluidskaarten</a></li>
-						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische Kaarten</a></li>
+						<li><a href="../grafische-kaarten/Grafische-kaarten.html">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
 						<li><a href="../moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
