--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -42,7 +42,7 @@
 						<li><a href="geluidskaarten/geluidskaarten.html">Geluidskaarten</a></li>
 						<li><a href="#">Grafische kaarten</a></li>
 						<li><a href="#">Geheugenkaarten</a></li>
-						<li><a href="#">Moederborden</a></li>
+						<li><a href="moederborden/moederborden.html">Moederborden</a></li>
 						<li></li>
 						<li></li>
 						<li></li>
